--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,10 +37,6 @@
             android:label="@string/favorisTitleID"
             android:parentActivityName=".MainActivity" />
         <activity
-            android:name=".OptionsActivity"
-            android:label="@string/parametreTitleID"
-            android:parentActivityName=".MainActivity" />
-        <activity
             android:name=".searchRecipeActivity"
             android:label="@string/textRechRec"
             android:parentActivityName=".MainActivity" />
@@ -59,6 +55,10 @@
         <activity
             android:name=".RecipeActivity"
             android:label="@string/recette"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".RegisterActivity"
+            android:label="@string/register"
             android:parentActivityName=".MainActivity" />
     </application>
 
