fb login + packages management

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.quentin.bonapp" >
+    package="com.bonapp.app.bonapp" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -11,13 +11,17 @@
     <uses-permission android:name="android.permission.READ_CONTACTS" />
 
     <application
-        android:name=".MyApplication"
+        android:name="com.bonapp.app.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/bonapp_icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
-        <activity android:name=".MainActivity" >
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id" />
+
+        <activity android:name="com.bonapp.app.MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,41 +29,39 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".SearchActivity"
+            android:name="com.bonapp.app.SearchActivity"
             android:label="@string/rechercheTitleID"
-            android:parentActivityName=".MainActivity" />
+            android:parentActivityName="com.bonapp.app.MainActivity" />
         <activity
-            android:name=".LoginActivity"
-            android:label="@string/userTitleID"
-            android:parentActivityName=".MainActivity" />
-        <activity
-            android:name=".FavoriteActivity"
-            android:label="@string/favorisTitleID"
-            android:parentActivityName=".MainActivity" />
-        <activity
-            android:name=".searchRecipeActivity"
+            android:name="com.bonapp.app.searchRecipeActivity"
             android:label="@string/textRechRec"
-            android:parentActivityName=".MainActivity" />
+            android:parentActivityName="com.bonapp.app.MainActivity" />
         <activity
-            android:name=".searchUserActivity"
+            android:name="com.bonapp.app.searchUserActivity"
             android:label="@string/rechercheUser"
-            android:parentActivityName=".MainActivity" />
+            android:parentActivityName="com.bonapp.app.MainActivity" />
         <activity
-            android:name=".ListUserActivity"
+            android:name="com.bonapp.app.ListUserActivity"
             android:label="@string/utilisateurs"
-            android:parentActivityName=".MainActivity" />
+            android:parentActivityName="com.bonapp.app.MainActivity" />
         <activity
-            android:name=".ListRecipeActivity"
+            android:name="com.bonapp.app.ListRecipeActivity"
             android:label="@string/recettes"
-            android:parentActivityName=".MainActivity" />
+            android:parentActivityName="com.bonapp.app.MainActivity" />
         <activity
-            android:name=".RecipeActivity"
+            android:name="com.bonapp.app.RecipeActivity"
             android:label="@string/recette"
-            android:parentActivityName=".MainActivity" />
+            android:parentActivityName="com.bonapp.app.MainActivity" />
         <activity
-            android:name=".RegisterActivity"
-            android:label="@string/register"
-            android:parentActivityName=".MainActivity" />
+            android:name="com.facebook.FacebookActivity"
+            android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
+        <activity
+            android:name="com.bonapp.app.LoginActivityFB"
+            android:label="@string/title_activity_login_activity_fb"
+            android:theme="@style/AppTheme.NoActionBar" >
+        </activity>
     </application>
 
 </manifest>
