--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,9 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.1"
+    repositories {
+        mavenCentral()
+    }
     defaultConfig {
         applicationId 'com.example.quentin.bonapp'
         minSdkVersion 17
@@ -27,4 +30,6 @@ dependencies {
     compile 'com.mcxiaoke.volley:library:1.0.19'
     compile 'com.android.support:design:23.1.1'
     compile 'com.google.code.gson:gson:2.5'
+    compile 'com.facebook.android:facebook-android-sdk:4.7.0'
+
 }
