--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
     <uses-permission android:name="android.permission.READ_CONTACTS" />
 
     <application
-        android:name="com.bonapp.app.MyApplication"
+        android:name="com.bonapp.app.Application.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/bonapp_icon"
         android:label="@string/app_name"
@@ -21,7 +21,7 @@
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
 
-        <activity android:name="com.bonapp.app.MainActivity" >
+        <activity android:name="com.bonapp.app.Activity.MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -29,38 +29,34 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.bonapp.app.SearchActivity"
-            android:label="@string/rechercheTitleID"
-            android:parentActivityName="com.bonapp.app.MainActivity" />
-        <activity
-            android:name="com.bonapp.app.searchRecipeActivity"
+            android:name="com.bonapp.app.Activity.SearchRecipeActivity"
             android:label="@string/textRechRec"
-            android:parentActivityName="com.bonapp.app.MainActivity" />
+            android:parentActivityName="com.bonapp.app.Activity.MainActivity" />
         <activity
-            android:name="com.bonapp.app.searchUserActivity"
-            android:label="@string/rechercheUser"
-            android:parentActivityName="com.bonapp.app.MainActivity" />
-        <activity
-            android:name="com.bonapp.app.ListUserActivity"
-            android:label="@string/utilisateurs"
-            android:parentActivityName="com.bonapp.app.MainActivity" />
-        <activity
-            android:name="com.bonapp.app.ListRecipeActivity"
+            android:name="com.bonapp.app.Activity.ListRecipeActivity"
             android:label="@string/recettes"
-            android:parentActivityName="com.bonapp.app.MainActivity" />
+            android:parentActivityName="com.bonapp.app.Activity.MainActivity" />
         <activity
-            android:name="com.bonapp.app.RecipeActivity"
+            android:name="com.bonapp.app.Activity.RecipeActivity"
             android:label="@string/recette"
-            android:parentActivityName="com.bonapp.app.MainActivity" />
+            android:parentActivityName="com.bonapp.app.Activity.MainActivity" />
         <activity
             android:name="com.facebook.FacebookActivity"
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
         <activity
-            android:name="com.bonapp.app.LoginActivityFB"
+            android:name="com.bonapp.app.Activity.LoginActivityFB"
             android:label="@string/title_activity_login_activity_fb"
             android:theme="@style/AppTheme.NoActionBar" >
+        </activity>
+        <activity
+            android:name="com.bonapp.app.Activity.FavoriteRecipeActivity"
+            android:label="@string/title_activity_favorite_recipe"
+            android:parentActivityName="com.bonapp.app.Activity.MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.bonapp.app.Activity.MainActivity" />
         </activity>
     </application>
 
